--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- winner message content -->
     <div class="winContainer hide">
         <p class="msg">winner</p>
-        <button id="newBtn hide1">New Game</button>
+        <button id="newBtn">New Game</button>
     </div>
     <!-- main body of the game -->
     <main>
